
Slick 7.x-2.0-dev, 2014-09-23
-----------------------------
Fixed for Soundcloud fatal error for when no internet connection available.

Slick 7.x-2.0-dev, 2014-09-16
-----------------------------
Updated slick.load.js to re-cache arrows to copy into responsives.
Issue #2339379 by suldan: Change check_plain into filter_xss_admin.
Issue #2339379 by suldan: Fixed for Views plugin: Content:title not available.

Slick 7.x-2.0-dev, 2014-09-12
-----------------------------
Updated slick.colorbox.js to avoid unslick(), and use slickGoTo() like before.
  Tested to work with the latest non-minified version from the master branch.

Added basic Scald atom_reference integration via Field collection overlay.

Slick 7.x-2.0-dev, 2014-09-8
----------------------------
Added new option: waitForAnimate. Only supported by non-minified version now.


Slick 7.x-2.0-dev, 2014-09-4
----------------------------
Added fixes for slick.media.js being screwed up after 1.3.7 update.
Added missing slick.theme--asnavfor.css

Corrected misleading tips: Avoid centerMode for the thumbnails slideToShow > 3.
It should say: Use odd numbers when centerMode on.


Slick 7.x-2.0-dev, 2014-09-3
----------------------------
Added fixes for asNavFor to Media and Field Collection.
Added skin asNavFor.
Updated slick.load.js to have proper .slide--current classes for the thumbnail
  navigation since core don't provide one. With no centerMode .slick-active can
  be as many as visible slides, and the current slide has no special class.
Temp tips till core fix: Avoid centerMode for the thumbnails slideToShow > 3.

Updated slick-media.tpl and slick-item.tpl to have no markups for thumbnails.

Added dummy/placeholder image to lazyLoad progressive.
Fixed for when lazyLoad is disabled, to allow sharing to Pinterest for small
  slides.

Updated slick.colorbox.js to work with asNavFor.
Added new theme slick_wrapper to hold asNavFor, two slicks with thumbnail
  navigation.