@@ -1,4 +1,9 @@
 
+Slick 7.x-2.0-dev, 2014-09-26
+-----------------------------
+Issue #2344829 by SpadXIII: Added "Support for adaptiveHeight".
+Added drupal_static to slick_get_options().
+
 Slick 7.x-2.0-dev, 2014-09-23
 -----------------------------
 Fixed for Soundcloud fatal error for when no internet connection available.
